--- a/client/UI/variant_1/zadanie2_part1_var1.ui
+++ b/client/UI/variant_1/zadanie2_part1_var1.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>493</width>
-    <height>361</height>
+    <height>404</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -19,7 +19,7 @@
      <x>10</x>
      <y>10</y>
      <width>471</width>
-     <height>61</height>
+     <height>111</height>
     </rect>
    </property>
    <property name="font">
@@ -36,7 +36,10 @@
    <property name="text">
     <string>Задание 2.*
  Сгруппируйте слова согласно их
- частям речи и переведите их. (n, v, adj)</string>
+ частям речи и переведите их.
+ - n / существительные, - v / глаголы, 
+ - adj / прилагательные, - adv / наречия.
+</string>
    </property>
    <property name="textFormat">
     <enum>Qt::AutoText</enum>
@@ -49,7 +52,7 @@
    <property name="geometry">
     <rect>
      <x>80</x>
-     <y>80</y>
+     <y>120</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -62,7 +65,7 @@
    <property name="geometry">
     <rect>
      <x>192</x>
-     <y>80</y>
+     <y>120</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -75,7 +78,7 @@
    <property name="geometry">
     <rect>
      <x>200</x>
-     <y>320</y>
+     <y>360</y>
      <width>101</width>
      <height>31</height>
     </rect>
@@ -88,7 +91,7 @@
    <property name="geometry">
     <rect>
      <x>100</x>
-     <y>80</y>
+     <y>120</y>
      <width>81</width>
      <height>20</height>
     </rect>
@@ -101,7 +104,7 @@
    <property name="geometry">
     <rect>
      <x>100</x>
-     <y>110</y>
+     <y>150</y>
      <width>81</width>
      <height>20</height>
     </rect>
@@ -114,7 +117,7 @@
    <property name="geometry">
     <rect>
      <x>192</x>
-     <y>110</y>
+     <y>150</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -124,7 +127,7 @@
    <property name="geometry">
     <rect>
      <x>80</x>
-     <y>110</y>
+     <y>150</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -137,7 +140,7 @@
    <property name="geometry">
     <rect>
      <x>100</x>
-     <y>140</y>
+     <y>180</y>
      <width>81</width>
      <height>20</height>
     </rect>
@@ -150,7 +153,7 @@
    <property name="geometry">
     <rect>
      <x>192</x>
-     <y>140</y>
+     <y>180</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -160,7 +163,7 @@
    <property name="geometry">
     <rect>
      <x>80</x>
-     <y>140</y>
+     <y>180</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -173,7 +176,7 @@
    <property name="geometry">
     <rect>
      <x>100</x>
-     <y>170</y>
+     <y>210</y>
      <width>81</width>
      <height>20</height>
     </rect>
@@ -186,7 +189,7 @@
    <property name="geometry">
     <rect>
      <x>192</x>
-     <y>170</y>
+     <y>210</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -196,7 +199,7 @@
    <property name="geometry">
     <rect>
      <x>80</x>
-     <y>170</y>
+     <y>210</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -209,7 +212,7 @@
    <property name="geometry">
     <rect>
      <x>100</x>
-     <y>200</y>
+     <y>240</y>
      <width>81</width>
      <height>20</height>
     </rect>
@@ -222,7 +225,7 @@
    <property name="geometry">
     <rect>
      <x>192</x>
-     <y>200</y>
+     <y>240</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -232,7 +235,7 @@
    <property name="geometry">
     <rect>
      <x>80</x>
-     <y>200</y>
+     <y>240</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -245,7 +248,7 @@
    <property name="geometry">
     <rect>
      <x>100</x>
-     <y>230</y>
+     <y>270</y>
      <width>81</width>
      <height>20</height>
     </rect>
@@ -258,7 +261,7 @@
    <property name="geometry">
     <rect>
      <x>192</x>
-     <y>230</y>
+     <y>270</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -268,7 +271,7 @@
    <property name="geometry">
     <rect>
      <x>80</x>
-     <y>230</y>
+     <y>270</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -281,7 +284,7 @@
    <property name="geometry">
     <rect>
      <x>100</x>
-     <y>260</y>
+     <y>300</y>
      <width>81</width>
      <height>20</height>
     </rect>
@@ -294,7 +297,7 @@
    <property name="geometry">
     <rect>
      <x>192</x>
-     <y>260</y>
+     <y>300</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -304,7 +307,7 @@
    <property name="geometry">
     <rect>
      <x>80</x>
-     <y>260</y>
+     <y>300</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -317,7 +320,7 @@
    <property name="geometry">
     <rect>
      <x>100</x>
-     <y>290</y>
+     <y>330</y>
      <width>81</width>
      <height>20</height>
     </rect>
@@ -330,7 +333,7 @@
    <property name="geometry">
     <rect>
      <x>192</x>
-     <y>290</y>
+     <y>330</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -340,7 +343,7 @@
    <property name="geometry">
     <rect>
      <x>80</x>
-     <y>290</y>
+     <y>330</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -353,7 +356,7 @@
    <property name="geometry">
     <rect>
      <x>290</x>
-     <y>80</y>
+     <y>120</y>
      <width>81</width>
      <height>20</height>
     </rect>
@@ -366,7 +369,7 @@
    <property name="geometry">
     <rect>
      <x>382</x>
-     <y>80</y>
+     <y>120</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -376,7 +379,7 @@
    <property name="geometry">
     <rect>
      <x>270</x>
-     <y>80</y>
+     <y>120</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -389,7 +392,7 @@
    <property name="geometry">
     <rect>
      <x>290</x>
-     <y>110</y>
+     <y>150</y>
      <width>81</width>
      <height>20</height>
     </rect>
@@ -402,7 +405,7 @@
    <property name="geometry">
     <rect>
      <x>382</x>
-     <y>110</y>
+     <y>150</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -412,7 +415,7 @@
    <property name="geometry">
     <rect>
      <x>270</x>
-     <y>110</y>
+     <y>150</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -425,7 +428,7 @@
    <property name="geometry">
     <rect>
      <x>290</x>
-     <y>140</y>
+     <y>180</y>
      <width>81</width>
      <height>20</height>
     </rect>
@@ -438,7 +441,7 @@
    <property name="geometry">
     <rect>
      <x>382</x>
-     <y>140</y>
+     <y>180</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -448,7 +451,7 @@
    <property name="geometry">
     <rect>
      <x>270</x>
-     <y>140</y>
+     <y>180</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -461,7 +464,7 @@
    <property name="geometry">
     <rect>
      <x>290</x>
-     <y>170</y>
+     <y>210</y>
      <width>81</width>
      <height>20</height>
     </rect>
@@ -474,7 +477,7 @@
    <property name="geometry">
     <rect>
      <x>382</x>
-     <y>170</y>
+     <y>210</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -484,7 +487,7 @@
    <property name="geometry">
     <rect>
      <x>270</x>
-     <y>170</y>
+     <y>210</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -497,7 +500,7 @@
    <property name="geometry">
     <rect>
      <x>290</x>
-     <y>200</y>
+     <y>240</y>
      <width>81</width>
      <height>20</height>
     </rect>
@@ -510,7 +513,7 @@
    <property name="geometry">
     <rect>
      <x>382</x>
-     <y>200</y>
+     <y>240</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -520,7 +523,7 @@
    <property name="geometry">
     <rect>
      <x>270</x>
-     <y>200</y>
+     <y>240</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -533,7 +536,7 @@
    <property name="geometry">
     <rect>
      <x>290</x>
-     <y>230</y>
+     <y>270</y>
      <width>81</width>
      <height>20</height>
     </rect>
@@ -546,7 +549,7 @@
    <property name="geometry">
     <rect>
      <x>382</x>
-     <y>230</y>
+     <y>270</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -556,7 +559,7 @@
    <property name="geometry">
     <rect>
      <x>270</x>
-     <y>230</y>
+     <y>270</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -569,7 +572,7 @@
    <property name="geometry">
     <rect>
      <x>290</x>
-     <y>260</y>
+     <y>300</y>
      <width>81</width>
      <height>20</height>
     </rect>
@@ -582,7 +585,7 @@
    <property name="geometry">
     <rect>
      <x>382</x>
-     <y>260</y>
+     <y>300</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -592,7 +595,7 @@
    <property name="geometry">
     <rect>
      <x>270</x>
-     <y>260</y>
+     <y>300</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -605,7 +608,7 @@
    <property name="geometry">
     <rect>
      <x>320</x>
-     <y>320</y>
+     <y>360</y>
      <width>161</width>
      <height>31</height>
     </rect>
