--- a/server/UI/variant_1/zadanie2_part1_var1.ui
+++ b/server/UI/variant_1/zadanie2_part1_var1.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>631</width>
-    <height>336</height>
+    <width>582</width>
+    <height>418</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,10 +16,10 @@
   <widget class="QLabel" name="label_title">
    <property name="geometry">
     <rect>
-     <x>80</x>
+     <x>50</x>
      <y>0</y>
      <width>471</width>
-     <height>61</height>
+     <height>121</height>
     </rect>
    </property>
    <property name="font">
@@ -36,7 +36,10 @@
    <property name="text">
     <string>Задание 2.*
  Сгруппируйте слова согласно их
- частям речи и переведите их.</string>
+ частям речи и переведите их.
+ - n / существительные, - v / глаголы, 
+ - adj / прилагательные, - adv / наречия.
+</string>
    </property>
    <property name="textFormat">
     <enum>Qt::AutoText</enum>
@@ -48,8 +51,8 @@
   <widget class="QLabel" name="label_number_1">
    <property name="geometry">
     <rect>
-     <x>80</x>
-     <y>100</y>
+     <x>30</x>
+     <y>150</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -61,8 +64,8 @@
   <widget class="QLineEdit" name="lineEdit_answer_1">
    <property name="geometry">
     <rect>
-     <x>192</x>
-     <y>100</y>
+     <x>142</x>
+     <y>150</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -74,8 +77,8 @@
   <widget class="QLabel" name="label_word_1">
    <property name="geometry">
     <rect>
-     <x>100</x>
-     <y>100</y>
+     <x>50</x>
+     <y>150</y>
      <width>81</width>
      <height>20</height>
     </rect>
@@ -87,8 +90,8 @@
   <widget class="QLabel" name="label_word_2">
    <property name="geometry">
     <rect>
-     <x>100</x>
-     <y>130</y>
+     <x>50</x>
+     <y>180</y>
      <width>81</width>
      <height>20</height>
     </rect>
@@ -100,8 +103,8 @@
   <widget class="QLineEdit" name="lineEdit_answer_2">
    <property name="geometry">
     <rect>
-     <x>192</x>
-     <y>130</y>
+     <x>142</x>
+     <y>180</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -110,8 +113,8 @@
   <widget class="QLabel" name="label_number_2">
    <property name="geometry">
     <rect>
-     <x>80</x>
-     <y>130</y>
+     <x>30</x>
+     <y>180</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -123,8 +126,8 @@
   <widget class="QLabel" name="label_word_3">
    <property name="geometry">
     <rect>
-     <x>100</x>
-     <y>160</y>
+     <x>50</x>
+     <y>210</y>
      <width>81</width>
      <height>20</height>
     </rect>
@@ -136,8 +139,8 @@
   <widget class="QLineEdit" name="lineEdit_answer_3">
    <property name="geometry">
     <rect>
-     <x>192</x>
-     <y>160</y>
+     <x>142</x>
+     <y>210</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -146,8 +149,8 @@
   <widget class="QLabel" name="label_number_3">
    <property name="geometry">
     <rect>
-     <x>80</x>
-     <y>160</y>
+     <x>30</x>
+     <y>210</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -159,8 +162,8 @@
   <widget class="QLabel" name="label_word_4">
    <property name="geometry">
     <rect>
-     <x>100</x>
-     <y>190</y>
+     <x>50</x>
+     <y>240</y>
      <width>81</width>
      <height>20</height>
     </rect>
@@ -172,8 +175,8 @@
   <widget class="QLineEdit" name="lineEdit_answer_4">
    <property name="geometry">
     <rect>
-     <x>192</x>
-     <y>190</y>
+     <x>142</x>
+     <y>240</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -182,8 +185,8 @@
   <widget class="QLabel" name="label_number_4">
    <property name="geometry">
     <rect>
-     <x>80</x>
-     <y>190</y>
+     <x>30</x>
+     <y>240</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -195,8 +198,8 @@
   <widget class="QLabel" name="label_word_5">
    <property name="geometry">
     <rect>
-     <x>100</x>
-     <y>220</y>
+     <x>50</x>
+     <y>270</y>
      <width>81</width>
      <height>20</height>
     </rect>
@@ -208,8 +211,8 @@
   <widget class="QLineEdit" name="lineEdit_answer_5">
    <property name="geometry">
     <rect>
-     <x>192</x>
-     <y>220</y>
+     <x>142</x>
+     <y>270</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -218,8 +221,8 @@
   <widget class="QLabel" name="label_number_5">
    <property name="geometry">
     <rect>
-     <x>80</x>
-     <y>220</y>
+     <x>30</x>
+     <y>270</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -231,8 +234,8 @@
   <widget class="QLabel" name="label_word_6">
    <property name="geometry">
     <rect>
-     <x>100</x>
-     <y>250</y>
+     <x>50</x>
+     <y>300</y>
      <width>81</width>
      <height>20</height>
     </rect>
@@ -244,8 +247,8 @@
   <widget class="QLineEdit" name="lineEdit_answer_6">
    <property name="geometry">
     <rect>
-     <x>192</x>
-     <y>250</y>
+     <x>142</x>
+     <y>300</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -254,8 +257,8 @@
   <widget class="QLabel" name="label_number_6">
    <property name="geometry">
     <rect>
-     <x>80</x>
-     <y>250</y>
+     <x>30</x>
+     <y>300</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -267,8 +270,8 @@
   <widget class="QLabel" name="label_word_7">
    <property name="geometry">
     <rect>
-     <x>100</x>
-     <y>280</y>
+     <x>50</x>
+     <y>330</y>
      <width>81</width>
      <height>20</height>
     </rect>
@@ -280,8 +283,8 @@
   <widget class="QLineEdit" name="lineEdit_answer_7">
    <property name="geometry">
     <rect>
-     <x>192</x>
-     <y>280</y>
+     <x>142</x>
+     <y>330</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -290,8 +293,8 @@
   <widget class="QLabel" name="label_number_7">
    <property name="geometry">
     <rect>
-     <x>80</x>
-     <y>280</y>
+     <x>30</x>
+     <y>330</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -303,8 +306,8 @@
   <widget class="QLabel" name="label_word_8">
    <property name="geometry">
     <rect>
-     <x>100</x>
-     <y>310</y>
+     <x>50</x>
+     <y>360</y>
      <width>81</width>
      <height>20</height>
     </rect>
@@ -316,8 +319,8 @@
   <widget class="QLineEdit" name="lineEdit_answer_8">
    <property name="geometry">
     <rect>
-     <x>192</x>
-     <y>310</y>
+     <x>142</x>
+     <y>360</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -326,8 +329,8 @@
   <widget class="QLabel" name="label_number_8">
    <property name="geometry">
     <rect>
-     <x>80</x>
-     <y>310</y>
+     <x>30</x>
+     <y>360</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -339,8 +342,8 @@
   <widget class="QLabel" name="label_word_9">
    <property name="geometry">
     <rect>
-     <x>370</x>
-     <y>100</y>
+     <x>320</x>
+     <y>150</y>
      <width>81</width>
      <height>20</height>
     </rect>
@@ -352,8 +355,8 @@
   <widget class="QLineEdit" name="lineEdit_answer_9">
    <property name="geometry">
     <rect>
-     <x>462</x>
-     <y>100</y>
+     <x>412</x>
+     <y>150</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -362,8 +365,8 @@
   <widget class="QLabel" name="label_number_9">
    <property name="geometry">
     <rect>
-     <x>350</x>
-     <y>100</y>
+     <x>300</x>
+     <y>150</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -375,8 +378,8 @@
   <widget class="QLabel" name="label_word_10">
    <property name="geometry">
     <rect>
-     <x>370</x>
-     <y>130</y>
+     <x>320</x>
+     <y>180</y>
      <width>81</width>
      <height>20</height>
     </rect>
@@ -388,8 +391,8 @@
   <widget class="QLineEdit" name="lineEdit_answer_10">
    <property name="geometry">
     <rect>
-     <x>462</x>
-     <y>130</y>
+     <x>412</x>
+     <y>180</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -398,8 +401,8 @@
   <widget class="QLabel" name="label_number_10">
    <property name="geometry">
     <rect>
-     <x>350</x>
-     <y>130</y>
+     <x>300</x>
+     <y>180</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -411,8 +414,8 @@
   <widget class="QLabel" name="label_word_11">
    <property name="geometry">
     <rect>
-     <x>370</x>
-     <y>160</y>
+     <x>320</x>
+     <y>210</y>
      <width>81</width>
      <height>20</height>
     </rect>
@@ -424,8 +427,8 @@
   <widget class="QLineEdit" name="lineEdit_answer_11">
    <property name="geometry">
     <rect>
-     <x>462</x>
-     <y>160</y>
+     <x>412</x>
+     <y>210</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -434,8 +437,8 @@
   <widget class="QLabel" name="label_number_11">
    <property name="geometry">
     <rect>
-     <x>350</x>
-     <y>160</y>
+     <x>300</x>
+     <y>210</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -447,8 +450,8 @@
   <widget class="QLabel" name="label_word_12">
    <property name="geometry">
     <rect>
-     <x>370</x>
-     <y>190</y>
+     <x>320</x>
+     <y>240</y>
      <width>81</width>
      <height>20</height>
     </rect>
@@ -460,8 +463,8 @@
   <widget class="QLineEdit" name="lineEdit_answer_12">
    <property name="geometry">
     <rect>
-     <x>462</x>
-     <y>190</y>
+     <x>412</x>
+     <y>240</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -470,8 +473,8 @@
   <widget class="QLabel" name="label_number_12">
    <property name="geometry">
     <rect>
-     <x>350</x>
-     <y>190</y>
+     <x>300</x>
+     <y>240</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -483,8 +486,8 @@
   <widget class="QLabel" name="label_word_13">
    <property name="geometry">
     <rect>
-     <x>370</x>
-     <y>220</y>
+     <x>320</x>
+     <y>270</y>
      <width>81</width>
      <height>20</height>
     </rect>
@@ -496,8 +499,8 @@
   <widget class="QLineEdit" name="lineEdit_answer_13">
    <property name="geometry">
     <rect>
-     <x>462</x>
-     <y>220</y>
+     <x>412</x>
+     <y>270</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -506,8 +509,8 @@
   <widget class="QLabel" name="label_number_13">
    <property name="geometry">
     <rect>
-     <x>350</x>
-     <y>220</y>
+     <x>300</x>
+     <y>270</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -519,8 +522,8 @@
   <widget class="QLabel" name="label_word_14">
    <property name="geometry">
     <rect>
-     <x>370</x>
-     <y>250</y>
+     <x>320</x>
+     <y>300</y>
      <width>81</width>
      <height>20</height>
     </rect>
@@ -532,8 +535,8 @@
   <widget class="QLineEdit" name="lineEdit_answer_14">
    <property name="geometry">
     <rect>
-     <x>462</x>
-     <y>250</y>
+     <x>412</x>
+     <y>300</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -542,8 +545,8 @@
   <widget class="QLabel" name="label_number_14">
    <property name="geometry">
     <rect>
-     <x>350</x>
-     <y>250</y>
+     <x>300</x>
+     <y>300</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -555,8 +558,8 @@
   <widget class="QLabel" name="label_word_15">
    <property name="geometry">
     <rect>
-     <x>370</x>
-     <y>280</y>
+     <x>320</x>
+     <y>330</y>
      <width>81</width>
      <height>20</height>
     </rect>
@@ -568,8 +571,8 @@
   <widget class="QLineEdit" name="lineEdit_answer_15">
    <property name="geometry">
     <rect>
-     <x>462</x>
-     <y>280</y>
+     <x>412</x>
+     <y>330</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -578,8 +581,8 @@
   <widget class="QLabel" name="label_number_15">
    <property name="geometry">
     <rect>
-     <x>350</x>
-     <y>280</y>
+     <x>300</x>
+     <y>330</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -591,8 +594,8 @@
   <widget class="QLineEdit" name="lineEdit_answer_16">
    <property name="geometry">
     <rect>
-     <x>270</x>
-     <y>100</y>
+     <x>220</x>
+     <y>150</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -604,8 +607,8 @@
   <widget class="QLineEdit" name="lineEdit_answer_17">
    <property name="geometry">
     <rect>
-     <x>270</x>
-     <y>130</y>
+     <x>220</x>
+     <y>180</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -617,8 +620,8 @@
   <widget class="QLineEdit" name="lineEdit_answer_18">
    <property name="geometry">
     <rect>
-     <x>270</x>
-     <y>160</y>
+     <x>220</x>
+     <y>210</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -630,8 +633,8 @@
   <widget class="QLineEdit" name="lineEdit_answer_19">
    <property name="geometry">
     <rect>
-     <x>270</x>
-     <y>190</y>
+     <x>220</x>
+     <y>240</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -643,8 +646,8 @@
   <widget class="QLineEdit" name="lineEdit_answer_20">
    <property name="geometry">
     <rect>
-     <x>270</x>
-     <y>220</y>
+     <x>220</x>
+     <y>270</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -656,8 +659,8 @@
   <widget class="QLineEdit" name="lineEdit_answer_21">
    <property name="geometry">
     <rect>
-     <x>270</x>
-     <y>250</y>
+     <x>220</x>
+     <y>300</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -669,8 +672,8 @@
   <widget class="QLineEdit" name="lineEdit_answer_22">
    <property name="geometry">
     <rect>
-     <x>270</x>
-     <y>280</y>
+     <x>220</x>
+     <y>330</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -682,8 +685,8 @@
   <widget class="QLineEdit" name="lineEdit_answer_23">
    <property name="geometry">
     <rect>
-     <x>270</x>
-     <y>310</y>
+     <x>220</x>
+     <y>360</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -695,8 +698,8 @@
   <widget class="QLineEdit" name="lineEdit_answer_24">
    <property name="geometry">
     <rect>
-     <x>550</x>
-     <y>100</y>
+     <x>500</x>
+     <y>150</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -708,8 +711,8 @@
   <widget class="QLineEdit" name="lineEdit_answer_25">
    <property name="geometry">
     <rect>
-     <x>550</x>
-     <y>130</y>
+     <x>500</x>
+     <y>180</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -721,8 +724,8 @@
   <widget class="QLineEdit" name="lineEdit_answer_26">
    <property name="geometry">
     <rect>
-     <x>550</x>
-     <y>160</y>
+     <x>500</x>
+     <y>210</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -734,8 +737,8 @@
   <widget class="QLineEdit" name="lineEdit_answer_27">
    <property name="geometry">
     <rect>
-     <x>550</x>
-     <y>190</y>
+     <x>500</x>
+     <y>240</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -747,8 +750,8 @@
   <widget class="QLineEdit" name="lineEdit_answer_28">
    <property name="geometry">
     <rect>
-     <x>550</x>
-     <y>220</y>
+     <x>500</x>
+     <y>270</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -760,8 +763,8 @@
   <widget class="QLineEdit" name="lineEdit_answer_29">
    <property name="geometry">
     <rect>
-     <x>550</x>
-     <y>250</y>
+     <x>500</x>
+     <y>300</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -773,8 +776,8 @@
   <widget class="QLineEdit" name="lineEdit_answer_30">
    <property name="geometry">
     <rect>
-     <x>550</x>
-     <y>280</y>
+     <x>500</x>
+     <y>330</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -786,8 +789,8 @@
   <widget class="QLabel" name="label_2">
    <property name="geometry">
     <rect>
-     <x>190</x>
-     <y>70</y>
+     <x>140</x>
+     <y>120</y>
      <width>41</width>
      <height>16</height>
     </rect>
@@ -799,8 +802,8 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>240</x>
-     <y>70</y>
+     <x>190</x>
+     <y>120</y>
      <width>101</width>
      <height>16</height>
     </rect>
@@ -812,8 +815,8 @@
   <widget class="QLabel" name="label_3">
    <property name="geometry">
     <rect>
-     <x>520</x>
-     <y>70</y>
+     <x>470</x>
+     <y>120</y>
      <width>101</width>
      <height>16</height>
     </rect>
@@ -825,8 +828,8 @@
   <widget class="QLabel" name="label_4">
    <property name="geometry">
     <rect>
-     <x>460</x>
-     <y>70</y>
+     <x>410</x>
+     <y>120</y>
      <width>41</width>
      <height>16</height>
     </rect>
