--- a/server/UI/variant_2/zadanie2_part1_var2.ui
+++ b/server/UI/variant_2/zadanie2_part1_var2.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>529</width>
-    <height>343</height>
+    <height>398</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -19,7 +19,7 @@
      <x>30</x>
      <y>10</y>
      <width>471</width>
-     <height>61</height>
+     <height>111</height>
     </rect>
    </property>
    <property name="font">
@@ -36,7 +36,10 @@
    <property name="text">
     <string>Задание 2.*
  Сгруппируйте слова согласно их
- частям речи и переведите их. (n, v, adj)</string>
+ частям речи и переведите их.
+ - n / существительные, - v / глаголы, 
+ - adj / прилагательные, - adv / наречия.
+</string>
    </property>
    <property name="textFormat">
     <enum>Qt::AutoText</enum>
@@ -49,7 +52,7 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>100</y>
+     <y>150</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -62,7 +65,7 @@
    <property name="geometry">
     <rect>
      <x>132</x>
-     <y>100</y>
+     <y>150</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -75,7 +78,7 @@
    <property name="geometry">
     <rect>
      <x>40</x>
-     <y>100</y>
+     <y>150</y>
      <width>81</width>
      <height>20</height>
     </rect>
@@ -88,7 +91,7 @@
    <property name="geometry">
     <rect>
      <x>40</x>
-     <y>130</y>
+     <y>180</y>
      <width>81</width>
      <height>20</height>
     </rect>
@@ -101,7 +104,7 @@
    <property name="geometry">
     <rect>
      <x>132</x>
-     <y>130</y>
+     <y>180</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -111,7 +114,7 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>130</y>
+     <y>180</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -124,7 +127,7 @@
    <property name="geometry">
     <rect>
      <x>40</x>
-     <y>160</y>
+     <y>210</y>
      <width>81</width>
      <height>20</height>
     </rect>
@@ -137,7 +140,7 @@
    <property name="geometry">
     <rect>
      <x>132</x>
-     <y>160</y>
+     <y>210</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -147,7 +150,7 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>160</y>
+     <y>210</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -160,7 +163,7 @@
    <property name="geometry">
     <rect>
      <x>40</x>
-     <y>190</y>
+     <y>240</y>
      <width>81</width>
      <height>20</height>
     </rect>
@@ -173,7 +176,7 @@
    <property name="geometry">
     <rect>
      <x>132</x>
-     <y>190</y>
+     <y>240</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -183,7 +186,7 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>190</y>
+     <y>240</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -196,7 +199,7 @@
    <property name="geometry">
     <rect>
      <x>40</x>
-     <y>220</y>
+     <y>270</y>
      <width>81</width>
      <height>20</height>
     </rect>
@@ -209,7 +212,7 @@
    <property name="geometry">
     <rect>
      <x>132</x>
-     <y>220</y>
+     <y>270</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -219,7 +222,7 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>220</y>
+     <y>270</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -232,7 +235,7 @@
    <property name="geometry">
     <rect>
      <x>40</x>
-     <y>250</y>
+     <y>300</y>
      <width>81</width>
      <height>20</height>
     </rect>
@@ -245,7 +248,7 @@
    <property name="geometry">
     <rect>
      <x>132</x>
-     <y>250</y>
+     <y>300</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -255,7 +258,7 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>250</y>
+     <y>300</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -268,7 +271,7 @@
    <property name="geometry">
     <rect>
      <x>40</x>
-     <y>280</y>
+     <y>330</y>
      <width>81</width>
      <height>20</height>
     </rect>
@@ -281,7 +284,7 @@
    <property name="geometry">
     <rect>
      <x>132</x>
-     <y>280</y>
+     <y>330</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -291,7 +294,7 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>280</y>
+     <y>330</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -304,7 +307,7 @@
    <property name="geometry">
     <rect>
      <x>40</x>
-     <y>310</y>
+     <y>360</y>
      <width>81</width>
      <height>20</height>
     </rect>
@@ -317,7 +320,7 @@
    <property name="geometry">
     <rect>
      <x>132</x>
-     <y>310</y>
+     <y>360</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -327,7 +330,7 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>310</y>
+     <y>360</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -340,7 +343,7 @@
    <property name="geometry">
     <rect>
      <x>290</x>
-     <y>100</y>
+     <y>150</y>
      <width>81</width>
      <height>20</height>
     </rect>
@@ -353,7 +356,7 @@
    <property name="geometry">
     <rect>
      <x>382</x>
-     <y>100</y>
+     <y>150</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -363,7 +366,7 @@
    <property name="geometry">
     <rect>
      <x>270</x>
-     <y>100</y>
+     <y>150</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -376,7 +379,7 @@
    <property name="geometry">
     <rect>
      <x>290</x>
-     <y>130</y>
+     <y>180</y>
      <width>81</width>
      <height>20</height>
     </rect>
@@ -389,7 +392,7 @@
    <property name="geometry">
     <rect>
      <x>382</x>
-     <y>130</y>
+     <y>180</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -399,7 +402,7 @@
    <property name="geometry">
     <rect>
      <x>270</x>
-     <y>130</y>
+     <y>180</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -412,7 +415,7 @@
    <property name="geometry">
     <rect>
      <x>290</x>
-     <y>160</y>
+     <y>210</y>
      <width>81</width>
      <height>20</height>
     </rect>
@@ -425,7 +428,7 @@
    <property name="geometry">
     <rect>
      <x>382</x>
-     <y>160</y>
+     <y>210</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -435,7 +438,7 @@
    <property name="geometry">
     <rect>
      <x>270</x>
-     <y>160</y>
+     <y>210</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -448,7 +451,7 @@
    <property name="geometry">
     <rect>
      <x>290</x>
-     <y>190</y>
+     <y>240</y>
      <width>81</width>
      <height>20</height>
     </rect>
@@ -461,7 +464,7 @@
    <property name="geometry">
     <rect>
      <x>382</x>
-     <y>190</y>
+     <y>240</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -471,7 +474,7 @@
    <property name="geometry">
     <rect>
      <x>270</x>
-     <y>190</y>
+     <y>240</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -484,7 +487,7 @@
    <property name="geometry">
     <rect>
      <x>290</x>
-     <y>220</y>
+     <y>270</y>
      <width>81</width>
      <height>20</height>
     </rect>
@@ -497,7 +500,7 @@
    <property name="geometry">
     <rect>
      <x>382</x>
-     <y>220</y>
+     <y>270</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -507,7 +510,7 @@
    <property name="geometry">
     <rect>
      <x>270</x>
-     <y>220</y>
+     <y>270</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -520,7 +523,7 @@
    <property name="geometry">
     <rect>
      <x>290</x>
-     <y>250</y>
+     <y>300</y>
      <width>81</width>
      <height>20</height>
     </rect>
@@ -533,7 +536,7 @@
    <property name="geometry">
     <rect>
      <x>382</x>
-     <y>250</y>
+     <y>300</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -543,7 +546,7 @@
    <property name="geometry">
     <rect>
      <x>270</x>
-     <y>250</y>
+     <y>300</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -556,7 +559,7 @@
    <property name="geometry">
     <rect>
      <x>290</x>
-     <y>280</y>
+     <y>330</y>
      <width>81</width>
      <height>20</height>
     </rect>
@@ -569,7 +572,7 @@
    <property name="geometry">
     <rect>
      <x>382</x>
-     <y>280</y>
+     <y>330</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -579,7 +582,7 @@
    <property name="geometry">
     <rect>
      <x>270</x>
-     <y>280</y>
+     <y>330</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -592,7 +595,7 @@
    <property name="geometry">
     <rect>
      <x>382</x>
-     <y>310</y>
+     <y>360</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -602,7 +605,7 @@
    <property name="geometry">
     <rect>
      <x>270</x>
-     <y>310</y>
+     <y>360</y>
      <width>16</width>
      <height>20</height>
     </rect>
@@ -615,7 +618,7 @@
    <property name="geometry">
     <rect>
      <x>290</x>
-     <y>310</y>
+     <y>360</y>
      <width>81</width>
      <height>20</height>
     </rect>
@@ -628,7 +631,7 @@
    <property name="geometry">
     <rect>
      <x>200</x>
-     <y>100</y>
+     <y>150</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -641,7 +644,7 @@
    <property name="geometry">
     <rect>
      <x>200</x>
-     <y>130</y>
+     <y>180</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -654,7 +657,7 @@
    <property name="geometry">
     <rect>
      <x>200</x>
-     <y>160</y>
+     <y>210</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -667,7 +670,7 @@
    <property name="geometry">
     <rect>
      <x>200</x>
-     <y>190</y>
+     <y>240</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -680,7 +683,7 @@
    <property name="geometry">
     <rect>
      <x>200</x>
-     <y>220</y>
+     <y>270</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -693,7 +696,7 @@
    <property name="geometry">
     <rect>
      <x>200</x>
-     <y>250</y>
+     <y>300</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -706,7 +709,7 @@
    <property name="geometry">
     <rect>
      <x>200</x>
-     <y>280</y>
+     <y>330</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -719,7 +722,7 @@
    <property name="geometry">
     <rect>
      <x>200</x>
-     <y>310</y>
+     <y>360</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -732,7 +735,7 @@
    <property name="geometry">
     <rect>
      <x>450</x>
-     <y>100</y>
+     <y>150</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -745,7 +748,7 @@
    <property name="geometry">
     <rect>
      <x>450</x>
-     <y>130</y>
+     <y>180</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -758,7 +761,7 @@
    <property name="geometry">
     <rect>
      <x>450</x>
-     <y>160</y>
+     <y>210</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -771,7 +774,7 @@
    <property name="geometry">
     <rect>
      <x>450</x>
-     <y>190</y>
+     <y>240</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -784,7 +787,7 @@
    <property name="geometry">
     <rect>
      <x>450</x>
-     <y>220</y>
+     <y>270</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -797,7 +800,7 @@
    <property name="geometry">
     <rect>
      <x>450</x>
-     <y>250</y>
+     <y>300</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -810,7 +813,7 @@
    <property name="geometry">
     <rect>
      <x>450</x>
-     <y>280</y>
+     <y>330</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -823,7 +826,7 @@
    <property name="geometry">
     <rect>
      <x>450</x>
-     <y>310</y>
+     <y>360</y>
      <width>31</width>
      <height>20</height>
     </rect>
@@ -836,7 +839,7 @@
    <property name="geometry">
     <rect>
      <x>130</x>
-     <y>70</y>
+     <y>120</y>
      <width>31</width>
      <height>31</height>
     </rect>
@@ -849,7 +852,7 @@
    <property name="geometry">
     <rect>
      <x>170</x>
-     <y>70</y>
+     <y>120</y>
      <width>101</width>
      <height>31</height>
     </rect>
@@ -862,7 +865,7 @@
    <property name="geometry">
     <rect>
      <x>380</x>
-     <y>70</y>
+     <y>120</y>
      <width>31</width>
      <height>31</height>
     </rect>
@@ -875,7 +878,7 @@
    <property name="geometry">
     <rect>
      <x>420</x>
-     <y>70</y>
+     <y>120</y>
      <width>101</width>
      <height>31</height>
     </rect>
